src/main/java/com/example/bakalarska_prace_app/errors/TomTomRoutingError.java
package com.example.bakalarska_prace_app.errors;

public class TomTomRoutingError extends RoutingError{
    public TomTomRoutingError(Integer errorNumber) {
        super(errorNumber);
    }
}
